--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_hosts">Хосты</string>
     <string name="title_settings">Настройки</string>
     <string name="btn_continue">Продолжить</string>
+    <string name="btn_update">Обновить</string>
     <string name="btn_dismiss">Отмена</string>
     <string name="text_welcome">Привет в zaprett! Это приложение предназначено для обхода цензуры и иных блокировок. Для полноценной работоспособности необходимо установить Magisk модуль.</string>
     <string name="btn_use_root">Использовать модуль</string>
@@ -25,6 +26,8 @@
     <string name="btn_restart_service">Перезапустить сервис</string>
     <string name="btn_autorestart">Переодически перезапускать сервис</string>
     <string name="btn_autoupdate">Авто обновление</string>
+    <string name="alert_version">Версия</string>
+    <string name="alert_changelog">Список изменений</string>
     <string name="snack_already_started">Сервис уже запущен.</string>
     <string name="snack_starting_service">Запускаем сервис...</string>
     <string name="snack_no_service">Сервис не запущен</string>
