--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <string name="title_hosts">Hosts</string>
     <string name="title_settings">Settings</string>
     <string name="btn_continue">Continue</string>
+    <string name="btn_update">Update</string>
     <string name="btn_dismiss">Dismiss</string>
     <string name="text_welcome">Hello to zaprett! This application is designed to bypass censorship and other blockages. For full functionality you need to install Magisk module.</string>
     <string name="btn_use_root">Use module</string>
@@ -25,6 +26,8 @@
     <string name="btn_restart_service">Restart service</string>
     <string name="btn_autorestart">Restart service periodicaly</string>
     <string name="btn_autoupdate">Autoupdate</string>
+    <string name="alert_version">Version</string>
+    <string name="alert_changelog">Changelog</string>
     <string name="snack_already_started">Service already started.</string>
     <string name="snack_starting_service">Starting service...</string>
     <string name="snack_no_service">Service is not launched</string>
