--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,6 +2,7 @@
 <resources>
     <string name="title_home">Главная</string>
     <string name="title_hosts">Хосты</string>
+    <string name="title_hosts_repo">Репозиторий хостов</string>
     <string name="title_settings">Настройки</string>
     <string name="btn_continue">Продолжить</string>
     <string name="btn_update">Обновить</string>
@@ -25,6 +26,14 @@
     <string name="btn_stop_service">Остановить сервис</string>
     <string name="btn_restart_service">Перезапустить сервис</string>
     <string name="btn_remove_host">Удалить</string>
+    <string name="btn_download_host">Скачать</string>
+    <string name="btn_add_host">Добавить</string>
+    <string name="btn_back">Назад</string>
+    <string name="btn_install_host">Установить</string>
+    <string name="btn_update_host">Обновить</string>
+    <string name="btn_installing_host">Установка</string>
+    <string name="btn_updating_host">Обновление</string>
+    <string name="btn_installed_host">Установленно</string>
     <string name="btn_autorestart">Переодически перезапускать сервис</string>
     <string name="btn_autoupdate">Авто обновление</string>
     <string name="alert_version">Версия</string>
@@ -44,4 +53,6 @@
     <string name="qs_not_available">Не доступно</string>
     <string name="qs_working">Работает</string>
     <string name="qs_not_working">Не работает</string>
+    <string name="about_title">О приложении</string>
+    <string name="about_text">Zaprett app От Cherret\nВерсия: %1$s</string>
 </resources>
