--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name" translatable="false">zaprett</string>
     <string name="title_home">Home</string>
     <string name="title_hosts">Hosts</string>
-    <string name="title_hosts_repo">Hosts Repo</string>
+    <string name="title_hosts_repo">Repository</string>
     <string name="title_settings">Settings</string>
     <string name="btn_continue">Continue</string>
     <string name="btn_update">Update</string>
@@ -29,6 +29,7 @@
     <string name="btn_download_host">Download</string>
     <string name="btn_add_host">Add</string>
     <string name="btn_back">Back</string>
+    <string name="btn_no_hosts">No Hosts</string>
     <string name="btn_install_host">Install</string>
     <string name="btn_update_host">Update</string>
     <string name="btn_installing_host">Installing</string>
@@ -36,12 +37,12 @@
     <string name="btn_installed_host">Installed</string>
     <string name="btn_autorestart">Restart service periodicaly</string>
     <string name="btn_autoupdate">Autoupdate</string>
-    <string name="alert_version">Version</string>
-    <string name="alert_changelog">Changelog</string>
+    <string name="btn_send_firebase_analytics">Send Firebase Analytics</string>
+    <string name="alert_version">Version: %1$s → %2$s\nChangelog:\n%3$s</string>
     <string name="snack_already_started">Service already started.</string>
     <string name="snack_starting_service">Starting service…</string>
     <string name="snack_no_service">Service is not launched</string>
-    <string name="snack_stopping_service">Stopping service...</string>
+    <string name="snack_stopping_service">Stopping service…</string>
     <string name="error_no_storage_title">No permission</string>
     <string name="error_no_storage_message">The application requires permission to acess the storage to work properly</string>
     <string name="btn_show_full_path">Show full list\'s path</string>
@@ -54,5 +55,5 @@
     <string name="qs_working">Working</string>
     <string name="qs_not_working">Not working</string>
     <string name="about_title">About app</string>
-    <string name="about_text">Zaprett App By Cherret\nVersion: %1$s</string>
+    <string name="about_text">Zaprett App by Cherret\nVersion: %1$s</string>
 </resources>
