--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -2,7 +2,8 @@
 <resources>
     <string name="title_home">Главная</string>
     <string name="title_hosts">Хосты</string>
-    <string name="title_hosts_repo">Репозиторий</string>
+    <string name="title_strategies">Стратегии</string>
+    <string name="title_repo">Репозиторий</string>
     <string name="title_settings">Настройки</string>
     <string name="btn_continue">Продолжить</string>
     <string name="btn_update">Обновить</string>
@@ -29,7 +30,8 @@
     <string name="btn_download_host">Скачать</string>
     <string name="btn_add_host">Добавить</string>
     <string name="btn_back">Назад</string>
-    <string name="btn_no_hosts">Нет хостов</string>
+    <string name="empty_list">Пусто :(</string>
+    <string name="title_author">Автор: %1$s</string>
     <string name="btn_install_host">Установить</string>
     <string name="btn_update_host">Обновить</string>
     <string name="btn_installing_host">Установка</string>
@@ -38,7 +40,7 @@
     <string name="btn_autorestart">Переодически перезапускать сервис</string>
     <string name="btn_autoupdate">Авто обновление</string>
     <string name="btn_send_firebase_analytics">Отправлять аналитику Firebase</string>
-    <string name="alert_version">Version: %1$s → %2$s\nСписок изменений:\n%3$s</string>
+    <string name="alert_version">Версия: %1$s → %2$s\nСписок изменений:\n%3$s</string>
     <string name="snack_already_started">Сервис уже запущен.</string>
     <string name="snack_starting_service">Запускаем сервис…</string>
     <string name="snack_no_service">Сервис не запущен</string>
