--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -72,7 +72,7 @@
     <string name="qs_stopping">Остановка…</string>
     <string name="module_version">Версия модуля</string>
     <string name="nfqws_version">Версия nfqws</string>
-    <string name="ciadpi_version">Версия ciadpi</string>
+    <string name="ciadpi_version">Версия ciadpi 0.17.1</string>
     <string name="unknown_text">неизвестно</string>
     <string name="service_mode">Режим работы</string>
     <string name="qs_not_available">Не доступно</string>
