Revert "Android 10 fix & update libs"

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -5,6 +5,8 @@
     <string name="title_strategies">Стратегии</string>
     <string name="title_repo">Репозиторий</string>
     <string name="title_settings">Настройки</string>
+    <string name="general_section">Основные настройки</string>
+    <string name="byedpi_section">Настройки ByeDPI</string>
     <string name="btn_continue">Продолжить</string>
     <string name="btn_update">Обновить</string>
     <string name="btn_dismiss">Отмена</string>
@@ -26,6 +28,8 @@
     <string name="btn_start_service">Запустить сервис</string>
     <string name="btn_stop_service">Остановить сервис</string>
     <string name="btn_restart_service">Перезапустить сервис</string>
+    <string name="notification_zaprett_description">zaprett proxy запущен</string>
+    <string name="toast_no_strategy_selected">Стратегия не выбрана</string>
     <string name="btn_remove_host">Удалить</string>
     <string name="btn_download_host">Скачать</string>
     <string name="btn_add_host">Добавить</string>
@@ -40,12 +44,25 @@
     <string name="btn_autorestart">Переодически перезапускать сервис</string>
     <string name="btn_autoupdate">Авто обновление</string>
     <string name="btn_send_firebase_analytics">Отправлять аналитику Firebase</string>
+    <string name="btn_repository_url_lists">URL репозитория хостов</string>
+    <string name="hint_enter_repository_url_lists">Введите URL репозитория хостов</string>
+    <string name="btn_repository_url_strategies">URL репозитория стратегий</string>
+    <string name="hint_enter_repository_url_strategies">Введите URL репозитория стратегий</string>
+    <string name="btn_ipv6">IPv6</string>
+    <string name="btn_ip">IP-адрес</string>
+    <string name="hint_ip">Введите IP-адрес</string>
+    <string name="btn_port">Порт</string>
+    <string name="hint_port">Введите порт</string>
+    <string name="btn_dns">DNS</string>
+    <string name="hint_dns">Введите DNS</string>
     <string name="alert_version">Версия: %1$s → %2$s\nСписок изменений:\n%3$s</string>
     <string name="snack_already_started">Сервис уже запущен.</string>
     <string name="snack_starting_service">Запускаем сервис…</string>
     <string name="snack_no_service">Сервис не запущен</string>
     <string name="snack_stopping_service">Останавливаем сервис…</string>
     <string name="error_no_storage_title">Нет разрешения</string>
+    <string name="notification_permission_title">Разрешение на уведомления</string>
+    <string name="notification_permission_message">Приложению нужно разрешение на отправку уведомлений</string>
     <string name="error_no_storage_message">Для правильной работы приложения необходимо разрешение на доступ к хранилищу</string>
     <string name="btn_show_full_path">Показывать полный путь к листу</string>
     <string name="pls_reboot_snack">Перезагрузите устройство для вступления изменений в силу</string>
@@ -53,10 +70,14 @@
     <string name="qs_name">Zaprett</string>
     <string name="qs_starting">Запуск…</string>
     <string name="qs_stopping">Остановка…</string>
+    <string name="module_version">Версия модуля</string>
+    <string name="nfqws_version">Версия nfqws</string>
+    <string name="ciadpi_version">Версия ciadpi</string>
+    <string name="unknown_text">неизвестно</string>
+    <string name="service_mode">Режим работы</string>
     <string name="qs_not_available">Не доступно</string>
     <string name="qs_working">Работает</string>
     <string name="qs_not_working">Не работает</string>
     <string name="about_title">О приложении</string>
-    <string name="about_text">Zaprett app от Cherret\nВерсия: %1$s</string>
-    <string name="error_copying_file">Ошибка при копировании файла</string>
+    <string name="about_text">Zaprett app от Cherret, egor-white\nВерсия: %1$s</string>
 </resources>
