--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -87,4 +87,6 @@
     <string name="title_blacklist">Чёрный список</string>
     <string name="btn_applist">Списки приложений</string>
     <string name="radio_disabed">Выключено</string>
+    <string name="btn_show_system_apps">Показывать системные приложения</string>
+    <string name="search_field">Поиск…</string>
 </resources>
