--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,6 @@
     <string name="title_blacklist">Black list</string>
     <string name="btn_applist">Apps lists</string>
     <string name="radio_disabed">Disabled</string>
+    <string name="btn_show_system_apps">Show system apps</string>
+    <string name="search_field">Search…</string>
 </resources>
