--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -95,4 +95,5 @@
     <string name="error_unknown">Неизвестная ошибка</string>
     <string name="btn_copy_log">Скопировать лог</string>
     <string name="log_copied">Лог скопирован</string>
+    <string name="download_error">Произошла ошибка скачивания, пожалуйста, сообщите о ней разработчикам</string>
 </resources>
