--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_strategies">Strategies</string>
     <string name="title_repo">Repository</string>
     <string name="title_settings">Settings</string>
+    <string name="title_debug">Debug</string>
     <string name="general_section">General settings</string>
     <string name="byedpi_section">ByeDPI settings</string>
     <string name="btn_continue">Continue</string>
@@ -49,6 +50,8 @@
     <string name="hint_enter_repository_url_lists">Enter hosts repository URL</string>
     <string name="btn_repository_url_strategies">Strategies repository URL</string>
     <string name="hint_enter_repository_url_strategies">Enter strategies repository URL</string>
+    <string name="btn_update_repository_url">Update repository URL</string>
+    <string name="hint_enter_update_repository_url">Enter update repository URL</string>
     <string name="btn_ipv6">IPv6</string>
     <string name="btn_ip">IP address</string>
     <string name="hint_ip">Enter IP address</string>
