--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -122,4 +122,5 @@
     <string name="selection_no_hosts_title">No active hosts</string>
     <string name="selection_no_hosts_message">No active host lists found, please enable one or more, otherwise the selection will not work</string>
     <string name="selection_available_domains">Available domains</string>
+    <string name="no_storage_permission_message">Missing permission to access files</string>
 </resources>
