add reset settings option

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -118,4 +118,6 @@
     <string name="selection_no_hosts_message">Не обнаружено активных списков хостов, включите один или несколько, иначе подбор не сработает</string>
     <string name="selection_available_domains">Доступные домены</string>
     <string name="no_storage_permission_message">Нет разрешения на доступ к файлам</string>
+    <string name="reset_settings_title">Сброс настроек</string>
+    <string name="reset_settings_message">ВЫ действительно хотите сбросить настройки?</string>
 </resources>
