--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -11,7 +11,7 @@
     <string name="btn_continue">Продолжить</string>
     <string name="btn_update">Обновить</string>
     <string name="btn_dismiss">Отмена</string>
-    <string name="text_welcome">Привет в zaprett! Это приложение предназначено для обхода цензуры и иных блокировок. Для полноценной работоспособности необходимо установить Magisk модуль.</string>
+    <string name="text_welcome">Добро пожаловать в zaprett! Это приложение предназначено для обхода цензуры и иных блокировок. Для полноценной работоспособности необходимо установить Magisk модуль.</string>
     <string name="btn_use_root">Использовать модуль</string>
     <string name="error_root_title">Root не получен</string>
     <string name="error_root_message">Не получилось получить root доступ. Дайте права root для использования модуля Magisk</string>
@@ -24,7 +24,7 @@
     <string name="status_enabled">Сервис zaprett работает. Нажми для обновления состояния</string>
     <string name="status_disabled">Сервис zaprett не работает. Нажми для обновления состояния</string>
     <string name="status_crashed">Сервис zaprett вероятно крашнулся. Нажмите кнопку перезапуска ниже</string>
-    <string name="update_available">Доступно новое обновление!</string>
+    <string name="update_available">Доступно обновление</string>
     <string name="btn_update_on_boot">Обновлять статус при запуске Главной страницы</string>
     <string name="btn_start_service">Запустить сервис</string>
     <string name="btn_stop_service">Остановить сервис</string>
@@ -119,5 +119,5 @@
     <string name="selection_available_domains">Доступные домены</string>
     <string name="no_storage_permission_message">Нет разрешения на доступ к файлам</string>
     <string name="reset_settings_title">Сброс настроек</string>
-    <string name="reset_settings_message">ВЫ действительно хотите сбросить настройки?</string>
+    <string name="reset_settings_message">Вы действительно хотите сбросить настройки?</string>
 </resources>
